--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,6 +3,7 @@ spring:
     name: ms-reports
   cloud:
     config:
+      enabled: false
       uri: http://localhost:8888
       fail-fast: true
       retry:
